--- a/src/main/webapp/hello.html
+++ b/src/main/webapp/hello.html
@@ -5,6 +5,18 @@
     <title>hello</title>
 </head>
 <body>
-hello
+<center>
+    <form action="/helloServlet" method="get">
+        <input type="checkbox" name="fruit" value="banana">🍌
+        <br>
+        <input type="checkbox" name="fruit" value="apple">🍎
+        <br>
+        <input type="checkbox" name="fruit" value="watermelon">🍉
+        <br>
+        <input type="checkbox" name="fruit" value="栗子">栗子
+        <br>
+        <input type="submit" value="提交">
+    </form>
+</center>
 </body>
 </html>
